# duneana

./: CMakeLists.txt
duneana/: CMakeLists.txt
duneana/2DROIAna/: ROIAna.fcl  ROIAna_module.cc  ROIAna_module.h  roiana_job.fcl
duneana/AnaTree/: AnalysisTree_module.cc
duneana/CAFMaker/: CAFMaker.fcl  CAFMaker_module.cc  CMakeLists.txt  FDCAFMaker_GEC.md  build.sh  select_ana_dune10kt_nu.fcl
duneana/DAQSimAna/: CMakeLists.txt  TriggerPrimitiveFinderPass1_tool.cc  TriggerPrimitiveFinderPass2_tool.cc  TriggerPrimitiveFinderTool.h  TriggerPrimitiveFinder_module.cc  WaveformDump_module.cc  vdcb_tde_detsim_nonoise_nozs.fcl
duneana/DAQSimAna/AbsRunningSumHitFinder/: AbsRunningSum.fcl  AbsRunningSumTPFinderPass1.h  AbsRunningSumTPFinderVDCB_module.cc  StandardHF.fcl  StandardTPFinderVDCB_module.cc
duneana/DAQSimAna/ArbitraryAna/: AddNoise_FindPrim.fcl  ArbitraryAna.fcl  ArbitraryAna_module.cc  GausHit_FastHit.fcl  Generate_Electron.fcl  Generate_Electron_Everywhere.fcl  Generate_Muon.fcl  Generate_Muon_Everywhere.fcl  RunEfficiency.fcl  addnoise_findprim_arbitraryana_fast.fcl  addnonoise_findprim_arbitraryana_fast.fcl  arbitraryana_job.fcl
duneana/DAQSimAna/DTPValidation/: CMakeLists.txt  HFChainValidation_module.cc  HitConverter_module.cc  HitDump_module.cc  RDDump_module.cc  RawDigitConverter_module.cc  firmware_hit_dump.fcl  rawdigit_dump.fcl  software_hit_dump.fcl  validate_hf_chain.fcl
duneana/DAQSimAna/PDSHitFinding/: pds_tp_finder.fcl  (+5 more)
duneana/SigShapeAna/: SignalShapeAna_module.cc  param_sigshapeana_dunefdvd.fcl  sigshapeanalysis_dunefdvd.fcl
duneana/SolarNuAna/: CMakeLists.txt  SolarNuAna.fcl  SolarNuAna_module.cc
duneana/WireClusterAnalysis/: CMakeLists.txt  WireAna.fcl  WireAna_Utils.h  WireAna_module.cc  WireAna_module.h
ups/: product_deps
(+40 files in other folders)
